--- a/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,11 @@
         android:textSize="50dp"
         android:layout_centerInParent="true"
         android:text="Ramakant" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello"
+        android:textSize="30dp"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
