--- a/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,10 @@
         android:textSize="50dp"
         android:layout_centerInParent="true"
         android:text="Ramakant" />
-    <TextView
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button_main"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello"
-        android:textSize="30dp"
-        android:layout_alignParentBottom="true"/>
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
