--- a/AndroidApp/app/src/main/res/layout/activity_login.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_login.xml
@@ -58,14 +58,28 @@
             android:padding="12dp"
             android:text="Login" />
 
-        <TextView
-            android:id="@+id/link_signup"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:gravity="center"
-            android:text="No account yet? Create one"
-            android:textSize="16dip" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/link_signup"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginBottom="24dp"
+                android:paddingTop="15dp"
+                android:text="No account yet? Create one"
+                android:textSize="16dip" />
+
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/sign_in_button_main"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="24dp" />
+        </RelativeLayout>
+
 
     </LinearLayout>
 </ScrollView>
